force-app/main/default/objects/NPLUS_Job__c/NPLUS_Job__c.object-meta.xml
<CustomObject>
    <description>A child of the Service Contract which brings together a superintendent and a SAP Job Type (GAS New; or GAS Replacement). SAP Accounting does associate a Code for each unique NPLUS Job which is not unique unless combined with the contract (e.g., K.300000.100.200 where K is type of contract, 300000 is contract code, and 100.200 is Job.WorkOrder/IPO number). In Mid America today accounting considers 100 to be the Job Number and 200 to be a Project. Over time the introduction of the SF platform will allow them to reduce their Job Numbers to just the three digit code and the Project object will work to provide the reporting that is desired. TC 4/23/2024</description>
    <label>NPLUS Job</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPLUS Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>