force-app/main/default/objects/NPLUS_Job__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>28857</description>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>NPLUS Job record Account must be of Type Customer</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NPLUS Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>