force-app/main/default/objects/NPLUS_Job__c/fields/Account_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Formula__c</fullName>
    <description>44580 in order for the datatable to show the lookup name value a user must have Edit on the object. Since that is not desirable I have created a formula instead. SCR_Control_Deck_Main (Flow)</description>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>