force-app/main/default/objects/NPLUS_Job__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <description>28857</description>
    <inlineHelpText>The Job Type value is managed via an integration with SAP</inlineHelpText>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gas New</fullName>
            </value>
            <value>
                <fullName>Gas Replacement</fullName>
            </value>
            <value>
                <fullName>Concrete/Paving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>