force-app/main/default/objects/NPLUS_Job__c/fields/Lookup_Formula__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Formula__c</fullName>
    <description>28857</description>
    <formula>Name &amp;&quot;-&quot;&amp;  TEXT(Job_Type__c)&amp;&quot;-&quot;&amp; SAP_Service_Contract_Job_Number__c   &amp;&quot;-&quot;&amp;  Superintendent__r.FirstName &amp;&quot; &quot;&amp; Superintendent__r.LastName  &amp;&quot; (&quot;&amp;text( Status__c )&amp;&quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name, Work Type, Superintendent and (Status) for quick reference in lookup</inlineHelpText>
    <label>Lookup Formula</label>
    <type>Text</type>
</CustomField>