force-app/main/default/objects/NPLUS_Job__c/fields/Project_Count__c.field-meta.xml
<CustomField>
    <fullName>Project_Count__c</fullName>
    <description>28102 Count of Projects</description>
    <inlineHelpText>Sum of Projects related to the Job</inlineHelpText>
    <label>Project Count</label>
    <summaryForeignKey>Project__c.NPLUS_Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>