force-app/main/default/objects/NPLUS_Job__c/fields/SAP_Service_Contract_Job_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Service_Contract_Job_Number__c</fullName>
    <description>28857</description>
    <externalId>true</externalId>
    <inlineHelpText>SAP Service Contract Job Number which is managed via an integration and including the SAP Service Contract Number and Job Number.</inlineHelpText>
    <label>SAP Service Contract Job Number</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>