force-app/main/default/objects/NPLUS_Job__c/fields/Service_Contract_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_Territory__c</fullName>
    <description>28857</description>
    <formula>Service_Contract__r.Service_Territory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the Name of the Service Territory related to the Service Contract</inlineHelpText>
    <label>Service Contract Territory</label>
    <type>Text</type>
</CustomField>