force-app/main/default/objects/NPLUS_Job__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>28857</description>
    <inlineHelpText>The regional Service Territory default value for new Projects</inlineHelpText>
    <label>Service Territory</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>NPLUS Job Territory Level must be 1</errorMessage>
        <filterItems>
            <field>ServiceTerritory.FSL__TerritoryLevel__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>NPLUS Jobs</relationshipLabel>
    <relationshipName>NPLUS_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>