force-app/main/default/objects/NPLUS_Job__c/fields/Service_Territory_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory_Name_Formula__c</fullName>
    <description>44580 in order for users who do not have Edit access to the job object to see the territory name in a flow datatable we had to create this formula field. SCR_Control_Deck_Main</description>
    <formula>Service_Territory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Territory Name</label>
    <type>Text</type>
</CustomField>