force-app/main/default/objects/NPLUS_Job__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>28857</description>
    <inlineHelpText>Default status of a new Job is New when it comes through integration. Project Coordinator can change to Open however the change to Locked should be handle via the integration.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Locked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>