force-app/main/default/objects/NPLUS_Job__c/fields/Summarized_Completed_Estimates__c.field-meta.xml
<CustomField>
    <fullName>Summarized_Completed_Estimates__c</fullName>
    <description>This is summary of all Project -&gt; Summarized Completed Estimates.</description>
    <inlineHelpText>This is summary of all Project -&gt; Summarized Completed Estimates.</inlineHelpText>
    <label>Summarized Completed Estimates</label>
    <summarizedField>Project__c.Summarized_Completed_Estimates__c</summarizedField>
    <summaryForeignKey>Project__c.NPLUS_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>