force-app/main/default/objects/NPLUS_Job__c/fields/Summarized_Estimated_Man_Hours__c.field-meta.xml
<CustomField>
    <fullName>Summarized_Estimated_Man_Hours__c</fullName>
    <description>This is a summary of the total value of the Total Estimated Man Hours on all child Projects.</description>
    <inlineHelpText>This is a summary of the total value of the Total Estimated Man Hours on all child Projects.</inlineHelpText>
    <label>Summarized Estimated Man Hours</label>
    <summarizedField>Project__c.Summarized_Estimated_Man_Hours__c</summarizedField>
    <summaryForeignKey>Project__c.NPLUS_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>