force-app/main/default/objects/NPLUS_Job__c/fields/Summarized_Estimates__c.field-meta.xml
<CustomField>
    <fullName>Summarized_Estimates__c</fullName>
    <description>This is a summary of the total value of the Subtotal Estimates on all child Projects.</description>
    <inlineHelpText>This is a summary of the total value of the Subtotal Estimates on all child Projects.</inlineHelpText>
    <label>Summarized Estimates</label>
    <summarizedField>Project__c.Summarized_Estimates__c</summarizedField>
    <summaryForeignKey>Project__c.NPLUS_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>