force-app/main/default/objects/NPLUS_Job__c/fields/Superintendent__c.field-meta.xml
<CustomField>
    <fullName>Superintendent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>28857</description>
    <inlineHelpText>Superintendent</inlineHelpText>
    <label>Superintendent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>