force-app/main/default/objects/NPLUS_Job__c/fields/Superintendent_Text__c.field-meta.xml
<CustomField>
    <fullName>Superintendent_Text__c</fullName>
    <description>Required for the Control Deck flow table to show and allow filter by Super Name</description>
    <formula>Superintendent__r.FirstName &amp;&quot; &quot;&amp; Superintendent__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Superintendent</label>
    <type>Text</type>
</CustomField>