force-app/main/default/objects/NPLUS_Job__c/validationRules/ACCOUNT_SYNC.validationRule-meta.xml
<ValidationRule>
    <fullName>ACCOUNT_SYNC</fullName>
    <active>true</active>
    <description>28857 Service Contract and Job Accounts should always align</description>
    <errorConditionFormula>Account__c &lt;&gt;  Service_Contract__r.AccountId</errorConditionFormula>
    <errorMessage>The Job Account does not match the Service Contract Account</errorMessage>
</ValidationRule>