force-app/main/default/objects/NPLUS_Job__c/validationRules/SAP_Service_Contract_Job_Number_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>SAP_Service_Contract_Job_Number_Length</fullName>
    <active>true</active>
    <description>28857 require field length to always be 16 characters to allow for formulas on components of the Number</description>
    <errorConditionFormula>LEN(SAP_Service_Contract_Job_Number__c )&lt;&gt; 16</errorConditionFormula>
    <errorMessage>The SAP Service Contract Job Number must be 16 characters in length to allow for reports and formulas to break it down into the elements.</errorMessage>
</ValidationRule>