force-app/main/default/objects/NPLUS_Job__c/validationRules/SAP_Service_Contract_Job_Number_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>SAP_Service_Contract_Job_Number_Match</fullName>
    <active>true</active>
    <description>28857 require value to always match the first 8 characters of the Parent Service Contract</description>
    <errorConditionFormula>left(SAP_Service_Contract_Job_Number__c,8)&lt;&gt; Service_Contract__r.SAP_Service_Contract_Number__c</errorConditionFormula>
    <errorMessage>The SAP Service Contract Job Number must be from the Parent Service Contract with matching the SAP Service Contract Number</errorMessage>
</ValidationRule>