force-app/main/default/objects/NPLUS_Job__c/validationRules/Territory_SYNC.validationRule-meta.xml
<ValidationRule>
    <fullName>Territory_SYNC</fullName>
    <active>true</active>
    <description>28040 The Service Territory must be a child of the Service Contract Territory</description>
    <errorConditionFormula>AND(
NOT(ISBLANK( Service_Territory__c )),
Service_Territory__r.ParentTerritoryId &lt;&gt; Service_Contract__r.Service_Territory__c)</errorConditionFormula>
    <errorMessage>The Service Territory must be a child of the Service Contract Territory (NPLUS Job)</errorMessage>
</ValidationRule>