force-app/main/default/objects/NPLUS_Job__c/listViews/X1077_All_Open.listView-meta.xml
<ListView>
    <fullName>X1077_All_Open</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Service_Contract__c</columns>
    <columns>Account__c</columns>
    <columns>Superintendent__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>Job_Type__c</columns>
    <columns>SAP_Service_Contract_Job_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Open</value>
    </filters>
    <filters>
        <field>Service_Contract_Territory__c</field>
        <operation>equals</operation>
        <value>1077</value>
    </filters>
    <label>1077 All (Open)</label>
</ListView>